# bubbletea

./: .gitignore  Contributing.md  ProjectStructure.md  PyREADME.md  PythonPackagingGuide.md  README.md  __init__.py  commands.py  keys.py  messages.py  model.py  mouse.py  pyproject.toml  renderer.py  screen.py  setup.py  tea.py
examples/: basics.py
