[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbletea"
version = "0.1.0"
description = "A Python TUI framework based on The Elm Architecture — port of the Go Bubble Tea library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "tui",
    "terminal", 
    "cli",
    "console",
    "elm-architecture",
    "bubbletea",
    "charm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/your-repo/bubbletea-python"
Documentation = "https://github.com/your-repo/bubbletea-python#readme"
Repository = "https://github.com/your-repo/bubbletea-python"
Issues = "https://github.com/your-repo/bubbletea-python/issues"
"Original Go Library" = "https://github.com/charmbracelet/bubbletea"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
